# pocketpilot

./: .env.example  .gitignore  README.md  cookies.txt  docker-compose.prod.yml  docker-compose.yml  render.yaml  test_analytics.py  test_backend.py  test_script.py  test_script2.py  test_script3.py  test_script4.py  test_script5.py
.github/workflows/: ci.yml  deploy.yml
aws-infrastructure/docs/: DEPLOYMENT.md
aws-infrastructure/nginx/: nginx.conf
aws-infrastructure/scripts/: ci-deploy.sh  deploy-backend.sh  ec2-setup.sh
aws-infrastructure/terraform/: alb.tf  asg.tf  cloudwatch.tf  elasticache.tf  network.tf  outputs.tf  provider.tf  rds.tf  s3.tf  secrets.tf  security.tf  variables.tf
backend/: .dockerignore  Dockerfile  alembic.ini  export_openapi.py  pyproject.toml  pytest.ini  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_transactions_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  main.py
backend/app/features/analytics/: ai_service.py  router.py
backend/app/features/auth/: router.py  schemas.py  security.py  service.py
backend/app/features/categorizer/: __init__.py  engine.py
backend/app/features/copilot/: __init__.py  ai.py  router.py
backend/app/features/transactions/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/features/transactions/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py  pdf_parser.py
backend/app/features/users/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_api.py  test_auth.py
docs/: api_reference.md  architecture_diagrams.md  authentication_guide.md  openapi.json  pocketpilot_postman_collection.json  portfolio_assets.md  production_checklist.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest-setup.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: sleek-cursor.tsx  theme-toggle.tsx
nginx/: nginx.conf
(+30 files in other folders)
