[project]
name = "pocketpilot-backend"
version = "0.1.0"
description = "PocketPilot — AI-powered Personal Finance Copilot API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.5",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.3.0",
    "slowapi>=0.1.9",
    "secure>=0.3.0",
    "fastapi-cache2[redis]>=0.2.1",
    "orjson>=3.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
